[tool.poetry]
name = "mindgpt"
version = "0.1.0"
description = "A Python package for mental health analysis using GPT models"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "mindgpt" },
    { include = "core" },
    { include = "utils" },
    { include = "models" },
    { include = "data" }
]

[tool.poetry.dependencies]
python = "^3.10.5"
transformers = "^4.32.0"
torch = "^2.0.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.0"
tqdm = "^4.65.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 